# chain

./: .clangd  .gitignore  CMakeLists.txt
build-mod/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmcr_numeric  compile_commands.json  dump_tree  dump_tree_sym  materialize_smoke  module_smoke  scratch  sin_probe
include/algebra/: add.hpp  algebra.hpp  log.hpp  mul.hpp  pow.hpp  router.hpp  rules.hpp  trig.hpp
include/chains/: access.hpp  algebra.hpp  arena.hpp  crmake.hpp  hasher.hpp  materialize.hpp  node.hpp  print.hpp  simplification.hpp
include/chains/algebra/: add.hpp  log.hpp  mul.hpp  pow.hpp  trig.hpp
include/core/: access.hpp  arena.hpp  core.hpp  leaf_hash.hpp  leaf_ops.hpp  node.hpp
include/crmake/: crmake.hpp
include/hashing/: algebraic.hpp  chain.hpp  hashing.hpp  intern.hpp  mix.hpp  rebuild.hpp  simplification.hpp
include/materialize/: materialize.hpp
include/shift/: interpret.hpp  kernels.hpp  odometer.hpp  plan.hpp  shift.hpp
scratch/: scratch.cpp
src/: algebra.cpp  algebra_impl.cpp  arena.cpp  crmake.cpp  materialize.cpp  print.cpp  simplification.cpp
tests/: test_arena  test_arena.cpp
